@@ -35,3 +35,14 @@ simply add the following flag to configure:
 (eg: ./configure --prefix=/usr --without-xorg-x11r7)
 
  - Christopher Bratusek <zanghar@freenet.de>
+
+Sawfish-UI GtkTree:
+*******************
+
+recently the old GtkNotebook UI has been replaced by a GtkTree
+UI, sadly this widget does currently not support single-clicking
+it, so you need to double-click it. 
+
+but: the old ui is -of course- still available, use:
+
+sawfish-ui --flatten
