@@ -83,6 +83,10 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 
 @item Tabbed Windowing Support [Yann Hodique, Scott Scriven, Nathan Froyd, Christopher Bratusek]
 
+@item Improved KDE3 Integration [Timo Korvola]
+
+@item Replaced hardcoded focus logic by focus-revert function [Timo Korvola]
+
 @item Tabbed Windowing Support: Raise Tabs on hover [Christopher Bratusek]
 
 @item Warp cursor to cycled windows, if warp-cursor is enabled [Christopher Bratusek]
