@@ -6,6 +6,12 @@
 	* lisp/sawfish/wm/ext/match-window.jl: expose fixed-position,
 	never-iconify, never-maximize in the Window-Matcher UI
 
+	* lisp/sawfish/wm/focus.jl
+	* lisp/sawfish/wm/state/transient.jl: improve kde3 integration
+	and new focus-revert logic [Timo Korvola]
+
+	* README.IMPORTANT: Note about double-click in UI
+
 2009-06-01  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widget.jl: UTF-8 Support
 
